--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "pdfjs": "^2.5.3",
+    "portfolio_website": "file:",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
